// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete should allow the CircularProgress bar props to be configured with loadingProps 1`] = `
<span
  aria-labelledby="label-id"
  aria-valuemax="100"
  aria-valuemin="0"
  class="rmd-circular-progress rmd-circular-progress--centered rmd-primary-color custom-class-name"
  id="circular-progress-:r6t:"
  role="progressbar"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
      cx="33"
      cy="33"
      r="30"
    />
  </svg>
</span>
`;

exports[`Autocomplete should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-autocomplete rmd-autocomplete--ra1"
  data-testid="container"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="autocomplete-listbox-:r1:"
    aria-expanded="false"
    aria-haspopup="listbox"
    autocapitalize="none"
    autocomplete="off"
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    id="autocomplete-:r0:"
    placeholder=" "
    role="combobox"
    tabindex="0"
    type="text"
    value=""
  />
  <label
    class="rmd-label rmd-label--floating"
    for="autocomplete-:r0:"
  >
    Field
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-box rmd-box--gap rmd-box--wrap rmd-autocomplete__right-addon rmd-background-container"
  >
    <button
      aria-controls="autocomplete-:r0:"
      aria-expanded="false"
      aria-label="Fruits"
      class="rmd-button rmd-button--icon rmd-interaction-surface"
      id="autocomplete-dropdown-:r5:"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
      >
        arrow_drop_down
      </span>
    </button>
  </span>
</div>
`;

exports[`Autocomplete should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-autocomplete rmd-autocomplete--ra1 custom-class-name"
  data-testid="container"
  style="color: white;"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="autocomplete-listbox-:r1:"
    aria-expanded="false"
    aria-haspopup="listbox"
    autocapitalize="none"
    autocomplete="off"
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    id="autocomplete-:r0:"
    placeholder=" "
    role="combobox"
    tabindex="0"
    type="text"
    value=""
  />
  <label
    class="rmd-label rmd-label--floating"
    for="autocomplete-:r0:"
  >
    Field
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-box rmd-box--gap rmd-box--wrap rmd-autocomplete__right-addon rmd-background-container"
  >
    <button
      aria-controls="autocomplete-:r0:"
      aria-expanded="false"
      aria-label="Fruits"
      class="rmd-button rmd-button--icon rmd-interaction-surface"
      id="autocomplete-dropdown-:r5:"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
      >
        arrow_drop_down
      </span>
    </button>
  </span>
</div>
`;

exports[`Autocomplete should attempt to pull menu item props from the options 1`] = `
<div
  aria-label="Fruits"
  class="rmd-menu rmd-menu--elevated"
  id="autocomplete-listbox-:r8l:"
  role="listbox"
  style="position: fixed; transform-origin: 50% 0; left: 16px; top: 0px; min-width: 0;"
  tabindex="-1"
>
  <ul
    class="rmd-list"
    role="none"
  >
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r8r:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Apple
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r8t:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Apricot
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r8v:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Banana
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r91:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Blueberry
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r93:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Cranberry
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r95:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Kiwi
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r97:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Mango
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      aria-disabled="true"
      class="rmd-list-item rmd-list-item--extra-large rmd-list-item--disabled-color rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r99:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Orange
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r9b:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Peach
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r9d:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Plum
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--extra-large rmd-interaction-surface rmd-menu-item rmd-option"
      id="option-:r9f:"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        favorite
      </span>
      <span
        class="rmd-list-item__text"
      >
        Strawberry
        <span
          class="rmd-list-item__text rmd-list-item__text--secondary"
        >
          Fruit
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Autocomplete should be able to render a CircularProgress bar when the loading prop is enabled 1`] = `
<span
  aria-label="Loading"
  aria-valuemax="100"
  aria-valuemin="0"
  class="rmd-circular-progress rmd-circular-progress--centered"
  id="circular-progress-:r6n:"
  role="progressbar"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
      cx="33"
      cy="33"
      r="30"
    />
  </svg>
</span>
`;
